env template update op reference

--- a/.env-rolo-template
+++ b/.env-rolo-template
@@ -1,6 +1,6 @@
 #!/bin/zsh
 export ROLO_PORT="1234"
-export DATABASE_URL="op://dev/seal-app/dburl"
-export DATABASE_NAME="op://dev/seal-app/dbname"
-export BOOTSTRAP_SEED="op://dev/seal-app/bootstrap_seed"
+export DATABASE_URL="op://dev/rolo/dburl"
+export DATABASE_NAME="op://dev/rolo/dbname"
+export BOOTSTRAP_SEED="op://dev/rolo/bootstrap_seed"
 export APP_SECRET=""
