--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -3,6 +3,9 @@
 // For a full list of overridable settings, and general information on folder-specific settings,
 // see the documentation: https://docs.zed.dev/configuration/configuring-zed#folder-specific-settings
 {
+  "copilot": {
+    "disabled_globs": [".env*"]
+  },
   "format_on_save": "on",
   "language_overrides": {
     "TypeScript": {
