--- a/.env-twix-template
+++ b/.env-twix-template
@@ -7,6 +7,7 @@ export TWIX_PORT="1235"
 export ROLO_URL="http://localhost:1234"
 export ROLO_APIKEY_TEST="op://dev/twix/apikey_test"
 export ROLO_APIKEY_LIVE=""
+export ROLO_APIKEY_CONFIG="op://dev/twix/apikey_config"
 
 # how twix will refer to rolo externally
 export ROLO_URL_CANONICAL="op://dev/rolo/canonical_url"
