--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -26,6 +26,7 @@ env:
   REPORTS_CONFIG: "${{ secrets.REPORTS_CONFIG }}"
   ROLO_APIKEY_LIVE: ""
   ROLO_APIKEY_TEST: "${{ secrets.ROLO_APIKEY_TEST }}"
+  ROLO_APIKEY_CONFIG: "${{ secrets.ROLO_APIKEY_CONFIG }}"
   SMTP_CONFIG: "${{ secrets.SMTP_CONFIG }}"
   TWIX_APIKEYS: "${{ secrets.LIZHI_APIKEYS }}"
 
