move user api keys to remote config

--- a/.env-twixtest-template
+++ b/.env-twixtest-template
@@ -1,4 +1,5 @@
 #!/bin/zsh
 export ROLO_URL="http://localhost:1234"
 export TWIX_URL="http://localhost:1235"
-export TWIX_APIKEYS='op://dev/twix/apikeys'
+export ROLO_APIKEY_CONFIG="op://dev/twix/apikey_config"
+export ROLO_URL_CANONICAL="op://dev/rolo/canonical_url"
