--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.2.0",
     "@pilotmoon/chewit": "0.3.0",
-    "@pilotmoon/fudge": "github:pilotmoon/fudge#1d64471",
+    "@pilotmoon/fudge": "../fudge",
     "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
@@ -30,7 +30,6 @@
     "zod-validation-error": "0.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.3.3",
     "@faker-js/faker": "7.6.0",
     "@types/koa": "2.13.5",
     "@types/koa__cors": "4.0.1",
