--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "5.8.0",
     "nodemailer": "6.9.4",
     "php-serialize": "4.0.2",
+    "picomatch": "4.0.2",
     "prando": "6.0.1",
     "saslprep": "1.0.3",
     "zod": "3.22.4",
@@ -42,6 +43,7 @@
     "@types/koa__router": "12.0.0",
     "@types/node": "18.13.0",
     "@types/nodemailer": "6.4.10",
+    "@types/picomatch": "2.3.3",
     "ava": "5.2.0",
     "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
@@ -49,7 +51,7 @@
   },
   "engines": {
     "node": "18.17.0",
-    "npm": "9.8.1"
+    "npm": "10.1.0"
   },
   "name": "rolo",
   "private": true,
