--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.2.0",
     "@pilotmoon/chewit": "0.3.0",
-    "@pilotmoon/fudge": "../fudge",
+    "@pilotmoon/fudge": "pilotmoon/fudge#ddf4227",
     "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
