--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.6.2",
     "@faker-js/faker": "7.6.0",
+    "@types/js-yaml": "4.0.9",
     "@types/jsbn": "1.2.33",
     "@types/koa": "2.13.5",
     "@types/koa__cors": "4.0.1",
