initial stab at extension signer code

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.2.0",
     "@pilotmoon/chewit": "0.3.0",
-    "@pilotmoon/fudge": "pilotmoon/fudge#ddf4227",
+    "@pilotmoon/fudge": "pilotmoon/fudge#4ba9be8",
     "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
     "axios": "1.6.8",
+    "bigint-conversion": "2.4.3",
     "case-anything": "2.1.13",
     "cbor": "8.1.0",
     "colors": "1.4.0",
@@ -17,7 +18,6 @@
     "content-type": "1.0.5",
     "cron": "2.4.3",
     "csv-parse": "5.5.5",
-    "emoji-regex": "10.2.1",
     "graphql": "16.8.1",
     "graphql-request": "6.1.0",
     "ip-cidr": "3.1.0",
