--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@koa/router": "12.0.0",
     "@pilotmoon/aquatic-prime": "0.2.0",
     "@pilotmoon/chewit": "0.3.0",
-    "@pilotmoon/fudge": "pilotmoon/fudge#4ba9be8",
+    "@pilotmoon/fudge": "pilotmoon/fudge#c78dbd4",
     "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
@@ -27,6 +27,7 @@
     "lru-cache": "10.0.0",
     "mongodb": "5.8.0",
     "nodemailer": "6.9.13",
+    "p-limit": "5.0.0",
     "php-serialize": "4.0.2",
     "picomatch": "4.0.2",
     "prando": "6.0.1",
