--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "php-serialize": "4.0.2",
     "picomatch": "4.0.2",
     "prando": "6.0.1",
+    "sanitize-html": "2.13.0",
     "saslprep": "1.0.3",
     "zod": "3.22.4",
     "zod-validation-error": "0.3.1"
@@ -50,6 +51,7 @@
     "@types/node": "18.13.0",
     "@types/nodemailer": "6.4.10",
     "@types/picomatch": "2.3.3",
+    "@types/sanitize-html": "2.11.0",
     "ava": "5.2.0",
     "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
