--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@noble/ed25519": "2.1.0",
     "@pilotmoon/aquatic-prime": "0.2.0",
     "@pilotmoon/chewit": "0.3.0",
-    "@pilotmoon/fudge": "pilotmoon/fudge#57969b9",
+    "@pilotmoon/fudge": "pilotmoon/fudge#d22edab",
     "@types/content-type": "1.1.6",
     "@types/koa-bodyparser": "4.3.10",
     "@types/lodash": "4.14.191",
@@ -48,14 +48,14 @@
     "@types/koa": "2.13.5",
     "@types/koa__cors": "4.0.1",
     "@types/koa__router": "12.0.0",
-    "@types/node": "18.13.0",
+    "@types/node": "22.18.6",
     "@types/nodemailer": "6.4.10",
     "@types/picomatch": "2.3.3",
     "@types/sanitize-html": "2.11.0",
     "ava": "6.1.3",
     "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
-    "typescript": "5.4.5"
+    "typescript": "5.9.2"
   },
   "engines": {
     "node": "22.17.0"
@@ -64,14 +64,15 @@
   "private": true,
   "scripts": {
     "build": "tsc",
+    "check": "tsc --noEmit",
     "deploy": "git push origin main:deploy",
     "dev-rolo": "./scripts/dev-rolo",
     "dev-twix": "./scripts/dev-twix",
     "start-rolo": "node ./dist/src/rolo/server.js",
     "start-twix": "node ./dist/src/twix/server.js",
-    "test-unit": "npx ava dist/test/testUnit.js",
-    "test-rolo": "npx ava dist/test/testRolo.js --serial",
-    "test-twix": "npx ava dist/test/testTwix.js --serial",
+    "test-unit": "ava dist/test/testUnit.js",
+    "test-rolo": "ava dist/test/testRolo.js --serial",
+    "test-twix": "ava dist/test/testTwix.js --serial",
     "test-rolo-local": "npm run build && npm run test-unit && ./scripts/env && (source .env-rolotest && npm run test-rolo)",
     "test-local": "npm run test-rolo-local && (source .env-twixtest && npm run test-twix)"
   },
