--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@biomejs/biome": "2.0.0",
     "@faker-js/faker": "7.6.0",
     "@types/adm-zip": "0.5.5",
+    "@types/bun": "1.3.3",
     "@types/js-yaml": "4.0.9",
     "@types/jsbn": "1.2.33",
     "@types/koa": "2.13.5",
