allow file deletion and remove 'hidden' property

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,7 @@
     "rules": {
       "recommended": true,
       "style": {
-        "noParameterAssign": "error",
+        "noParameterAssign": "warn",
         "useAsConstAssertion": "error",
         "useDefaultParameterLast": "error",
         "useEnumInitializers": "error",
